Bug 928621 - Make call-fdnAction-menu hidden by default moving the action menu to the `FDN list` panel

--- a/apps/settings/style/simcard.css
+++ b/apps/settings/style/simcard.css
@@ -20,20 +20,3 @@
   font-size: 1.4rem;
 }
 
-
-/**
- * FDN contact action menu
- */
-
-#call-fdnList-action {
-  display: none;
-}
-
-#call-fdnList-action.visible {
-  display: inline;
-}
-
-#call-fdnList-action header {
-  height: 6rem;
-}
-
